<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.muzica.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F1F1F1"
        android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/library" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/playing" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/playlist_name" />

    </LinearLayout>

        <TextView
            style="@style/Title_Pages"
            android:layout_marginLeft="@dimen/xsmall"
            android:layout_marginRight="@dimen/xsmall"
            android:layout_marginTop="@dimen/xsmall"
            android:background="@color/colorScrim"
            android:text="@string/home1"
            android:textColor="@color/colorSection" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium"
            android:background="@color/colorAccent"
            android:padding="@dimen/medium"
            android:text="@string/home3"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/heading_body_regular"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium"
            android:background="@color/colorAccent"
            android:padding="@dimen/medium"
            android:text="@string/home2"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/heading_body_regular"
            android:textStyle="bold" />
    </LinearLayout>

    </ScrollView>