<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.muzica.MainActivity">

    <!-- Welcome Screen -->


        <ImageView
            android:id="@+id/welcome_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/music" />
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/scrim" />


        <TextView
            android:id="@+id/intro"
            style="@style/Title"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/medium"
            android:text="@string/Intro"
            android:layout_above="@+id/welcome"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <!-- Welcome button -->

        <Button
            android:id="@+id/welcome"
            style="@style/WelcomeButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/large"
            android:elevation="@dimen/medium"
            android:text="@string/button" />

    </RelativeLayout>

