<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.muzica.NowPlaying">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/welcome_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/music4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorScrim"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small"
                style="@style/Title_Pages"
                android:background="@color/colorScrim"
                android:layout_marginTop="@dimen/xsmall"
                android:layout_marginLeft="@dimen/xsmall"
                android:layout_marginRight="@dimen/xsmall"
                android:textColor="@color/colorSection"
                android:text="@string/activity_three"/>

            <!-- Now Playing layout. -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@color/colorBackground"
                android:layout_margin="@dimen/small"
                android:padding="@dimen/small"
                android:orientation="vertical">



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/album_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:paddingLeft="@dimen/small"
                        android:src="@drawable/music7" />

                    <TextView
                        android:id="@+id/song"
                        style="@style/Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/song"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/album"
                        style="@style/DescriptionMini"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/song"
                        android:layout_alignStart="@+id/song"
                        android:layout_below="@+id/song"
                        android:text="@string/album_name"
                        android:textColor="@color/colorPrimaryDark" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="12dp"
                        android:id="@+id/linearLayout2"
                        android:layout_alignBottom="@+id/album_image"
                        android:layout_alignLeft="@+id/album"
                        android:layout_alignStart="@+id/album">

                        <ImageButton
                            android:id="@+id/imageButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:tint="@color/colorAccent"
                            android:layout_marginRight="@dimen/small"
                            app:srcCompat="@android:drawable/ic_media_previous" />

                        <ImageButton
                            android:id="@+id/imageButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:tint="@color/colorAccent"
                            android:layout_marginRight="@dimen/small"
                            app:srcCompat="@android:drawable/ic_media_play" />

                        <ImageButton
                            android:id="@+id/imageButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:layout_marginRight="@dimen/small"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@android:drawable/ic_media_next" />

                        <ImageButton
                            android:id="@+id/imageButton5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/small"
                            android:background="@color/colorPrimary"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

                        <ImageButton
                            android:id="@+id/imageButton6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@android:drawable/ic_menu_share" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:cropToPadding="false"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@android:drawable/btn_star"
                        android:layout_alignParentTop="true"
                        android:layout_alignRight="@+id/linearLayout2"
                        android:layout_alignEnd="@+id/linearLayout2" />

                </RelativeLayout>
            </LinearLayout>

            <!-- Library layout. -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorScrim"
                android:layout_margin="@dimen/small"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="vertical"
                    android:background="@color/colorBackground1"
                    android:elevation="4dp"
                    android:layout_margin="@dimen/xsmall">

                    <TextView
                        style="@style/Description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/song"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        style="@style/DescriptionMini"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/album_name"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="vertical"
                    android:background="@color/colorBackground1"
                    android:elevation="4dp"
                    android:layout_margin="@dimen/xsmall">

                    <TextView
                        style="@style/Description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/song"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        style="@style/DescriptionMini"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/album_name"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="vertical"
                    android:background="@color/colorBackground1"
                    android:elevation="4dp"
                    android:layout_margin="@dimen/xsmall">

                    <TextView
                        style="@style/Description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/song"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        style="@style/DescriptionMini"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/album_name"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="vertical"
                    android:background="@color/colorBackground1"
                    android:elevation="4dp"
                    android:layout_margin="@dimen/xsmall">

                    <TextView
                        style="@style/Description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/song"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        style="@style/DescriptionMini"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/album_name"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="vertical"
                    android:background="@color/colorBackground1"
                    android:elevation="4dp"
                    android:layout_margin="@dimen/xsmall">

                    <TextView
                        style="@style/Description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/song"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        style="@style/DescriptionMini"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/album_name"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="vertical"
                    android:background="@color/colorBackground1"
                    android:elevation="4dp"
                    android:layout_margin="@dimen/xsmall">

                    <TextView
                        style="@style/Description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/song"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        style="@style/DescriptionMini"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/album_name"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="vertical"
                    android:background="@color/colorBackground1"
                    android:elevation="4dp"
                    android:layout_margin="@dimen/xsmall">

                    <TextView
                        style="@style/Description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/song"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        style="@style/DescriptionMini"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/album_name"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="vertical"
                    android:background="@color/colorBackground1"
                    android:elevation="4dp"
                    android:layout_margin="@dimen/xsmall">

                    <TextView
                        style="@style/Description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/song"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        style="@style/DescriptionMini"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/album_name"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="vertical"
                    android:background="@color/colorBackground1"
                    android:elevation="4dp"
                    android:layout_margin="@dimen/xsmall">

                    <TextView
                        style="@style/Description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/song"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        style="@style/DescriptionMini"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/album_name"
                        android:paddingLeft="@dimen/xsmall"
                        android:paddingTop="@dimen/xsmall"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

</ScrollView>
